[package]
name = "windowsjs"
version = "0.1.0"
edition = "2018"


[lib]
crate-type = ["cdylib"]


[dependencies]
node-bindgen = { version = "4.0" }

[dependencies.druid]
version = "0.6.0"
features = ["im", "svg", "image"]


[build-dependencies]
node-bindgen = { version = "4.0", features = ["build"] }